@@ -1,4 +1,4 @@
-.TH SG_RAW "8" "December 2010" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_RAW "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
 .SH NAME
 sg_raw \- sends an arbitrary SCSI command to a device
 .SH SYNOPSIS
@@ -50,8 +50,8 @@ Expect to receive up to \fIRLEN\fR bytes of data from the \fIDEVICE\fR.
 of bytes.
 .TP
 \fB\-R\fR, \fB\-\-readonly\fR
-Open \fIDEVICE\fR read-only. The default (without this option) is to open
-it read-write.
+Open \fIDEVICE\fR read\-only. The default (without this option) is to open
+it read\-write.
 .TP
 \fB\-s\fR, \fB\-\-send\fR=\fISLEN\fR
 Read \fISLEN\fR bytes of data, either from stdin or from a file, and send
@@ -125,7 +125,7 @@ Written by Ingo van Lil
 .SH "REPORTING BUGS"
 Report bugs to <inguin at gmx dot de>.
 .SH COPYRIGHT
-Copyright \(co 2001\-2010 Ingo van Lil
+Copyright \(co 2001\-201q Ingo van Lil
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
