@@ -50,9 +50,9 @@ address is read. The default is to leave the 'PBLOCK' bit clear in
 which case the logical block (plus any ECC data) is read.
 .TP
 \fB\-r\fR, \fB\-\-readonly\fR
-opens the DEVICE read-only rather than read-write which is the
-default. The Linux sg driver needs read-write access for the SCSI
-READ LONG command but other access methods may require read-only
+opens the DEVICE read\-only rather than read\-write which is the
+default. The Linux sg driver needs read\-write access for the SCSI
+READ LONG command but other access methods may require read\-only
 access.
 .TP
 \fB\-v\fR, \fB\-\-verbose\fR
